--- a/common-npm-packages/kubernetes-common-v2/package.json
+++ b/common-npm-packages/kubernetes-common-v2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-kubernetes-common-v2",
-  "version": "1.177.0",
+  "version": "2.0.0-preview",
   "description": "Common Library for Kubernetes",
   "repository": {
     "type": "git",
@@ -13,8 +13,8 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "azure-pipelines-task-lib": "2.11.2",
-    "azure-pipelines-tool-lib": "0.12.0",
+    "azure-pipelines-task-lib": "3.0.6-preview.0",
+    "azure-pipelines-tool-lib": "1.0.0-preview.0",
     "js-yaml": "3.6.1"
   },
   "devDependencies": {
