--- a/common-npm-packages/AzureRmDeploy-common/package.json
+++ b/common-npm-packages/AzureRmDeploy-common/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "azurermdeploycommon",
-  "version": "1.1.0",
+  "name": "azure-pipelines-tasks-azurermdeploycommon",
+  "version": "2.0.0-preview.0",
   "description": "Common Lib for Azure ARM REST apis",
   "repository": {
     "type": "git",
