--- a/Tasks/MavenV3/package.json
+++ b/Tasks/MavenV3/package.json
@@ -13,7 +13,7 @@
     "azure-pipelines-tasks-codeanalysis-common": "2.0.0-preview.0",
     "azure-pipelines-tasks-codecoverage-tools": "2.0.0-preview.0",
     "azure-pipelines-tasks-java-common": "2.0.0-preview.0",
-    "azure-pipelines-tasks-packaging-common": "2.0.0-preview.0",
+    "azure-pipelines-tasks-packaging-common": "^2.0.0-preview.1",
     "base-64": "^0.1.0",
     "fs-extra": "^0.30.0",
     "request": "^2.74.0",
