--- a/Tasks/MavenV2/package.json
+++ b/Tasks/MavenV2/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^10.17.0",
+    "@types/mocha": "^5.2.7",
     "@types/q": "^1.5.4",
     "azure-pipelines-task-lib": "^3.0.6-preview.0",
     "azure-pipelines-tasks-codeanalysis-common": "^2.0.0-preview.0",
