--- a/common-npm-packages/docker-common-v2/package.json
+++ b/common-npm-packages/docker-common-v2/package.json
@@ -13,12 +13,12 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "10.17.0",
-    "@types/mocha": "5.2.7",
-    "@types/uuid": "8.3.0",
+    "@types/node": "^10.17.0",
+    "@types/mocha": "^5.2.7",
+    "@types/uuid": "^8.3.0",
+    "@types/q": "1.5.4",
     "del": "2.2.0",
     "q": "1.4.1",
-    "vso-node-api": "6.0.1-preview",
     "azure-pipelines-task-lib": "3.0.6-preview.0"
   },
   "devDependencies": {
