--- a/Tasks/HelmInstallerV0/package.json
+++ b/Tasks/HelmInstallerV0/package.json
@@ -9,7 +9,7 @@
     "js-yaml": "3.6.1",
     "typed-rest-client": "0.12.0",
     "azure-pipelines-tool-lib": "0.12.0",
-    "azure-pipelines-tasks-kubernetes-common-v2": "1.0.0"
+    "azure-pipelines-tasks-kubernetes-common-v2": "^2.0.0-preview.0"
   },
   "devDependencies": {
     "typescript": "4.0.2"
