--- a/Tasks/HelmInstallerV0/package.json
+++ b/Tasks/HelmInstallerV0/package.json
@@ -4,7 +4,7 @@
     "@types/q": "^1.5.0",
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "^2.9.3",
+    "azure-pipelines-task-lib": "^3.0.6-preview.0",
     "del": "2.2.0",
     "js-yaml": "3.6.1",
     "typed-rest-client": "0.12.0",
