--- a/Tasks/NpmV0/package.json
+++ b/Tasks/NpmV0/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
+    "azure-pipelines-tasks-packaging-common": "1.0.3",
     "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
   }
 }
