--- a/Tasks/NpmV1/package.json
+++ b/Tasks/NpmV1/package.json
@@ -18,9 +18,9 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "azure-pipelines-task-lib": "2.8.0",
+    "azure-pipelines-tasks-packaging-common": "1.0.3",
     "ini": "^1.3.4",
     "mockery": "^1.7.0",
-    "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
     "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
   }
 }
