--- a/common-npm-packages/AzureRmDeploy-common/package.json
+++ b/common-npm-packages/AzureRmDeploy-common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "azurermdeploycommon",
+  "name": "azure-pipelines-tasks-azurermdeploycommon",
   "version": "1.1.0",
   "description": "Common Lib for Azure ARM REST apis",
   "repository": {
@@ -10,6 +10,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Microsoft/vsts-tasks/issues"
+  },
+  "scripts": {
+    "build": "node ../build-scripts/downloadArchive.js https://vstsagenttools.blob.core.windows.net/tools/openssl/1.0.2/M138/openssl.zip ./openssl && node make.js"
   },
   "homepage": "https://github.com/Microsoft/vsts-tasks#readme",
   "dependencies": {
@@ -26,5 +29,8 @@
     "winreg": "1.2.2",
     "xml2js": "0.4.13",
     "node-stream-zip": "1.7.0"
+  },
+  "devDependencies": {
+    "typescript": "2.3.4"
   }
 }
