--- a/Tasks/DuffleInstallerV0/package.json
+++ b/Tasks/DuffleInstallerV0/package.json
@@ -4,7 +4,7 @@
     "@types/node": "^10.17.0",
     "@types/q": "^1.5.0",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "2.8.0",
+    "azure-pipelines-task-lib": "^3.0.6-preview.0",
     "azure-pipelines-tool-lib": "0.11.0",
     "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
   },
