--- a/Tasks/ReviewAppV0/package.json
+++ b/Tasks/ReviewAppV0/package.json
@@ -20,7 +20,7 @@
     "@types/node": "^10.17.0",
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "2.9.3"
+    "azure-pipelines-task-lib": "3.0.6-preview.0"
   },
   "devDependencies": {
     "typescript": "4.0.2"
