--- a/Tasks/AzureFunctionAppV1/package.json
+++ b/Tasks/AzureFunctionAppV1/package.json
@@ -24,7 +24,7 @@
     "azure-storage": "2.2.1",
     "moment": "2.21.0",
     "q": "1.4.1",
-    "uuid": "^8.3.0",
+    "uuid": "3.1.0",
     "xml2js": "0.4.13"
   },
   "devDependencies": {
