--- a/Tasks/NpmV1/package.json
+++ b/Tasks/NpmV1/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "azure-pipelines-task-lib": "3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.0.6-preview.0",
     "azure-pipelines-tasks-packaging-common": "2.0.0-preview.1",
     "ini": "^1.3.4",
     "mockery": "^1.7.0",
