--- a/Tasks/FileTransformV1/package.json
+++ b/Tasks/FileTransformV1/package.json
@@ -20,7 +20,7 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.0",
     "@types/q": "1.0.7",
-    "azure-pipelines-tasks-webdeployment-common": "file:../../../../common-update/azure-pipelines-tasks/common-npm-packages/webdeployment-common-v2/_build/azure-pipelines-tasks-webdeployment-common-3.0.0-preview.0.tgz",
+    "azure-pipelines-tasks-webdeployment-common": "^3.0.0-preview.1",
     "q": "1.4.1"
   },
   "devDependencies": {
