--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -95,8 +95,16 @@ steps:
       # Build the release branch name
       $currentSprint = (Invoke-WebRequest https://whatsprintis.it/sprint -Headers @{"Accept"= "application/json"} | ConvertFrom-Json).sprint
       $releaseBranch = "releases/m" + $currentSprint
-      # Push branch to git
+      # add config entry to avoid errors while pulling
+      git config  user.email "bot@courtesy.com"
+      git config  user.name "Courtesy Bot"
+      # Pull commits from remote and push branch to git
       git checkout -b $releaseBranch
+      Write-Host 'Trying to pull the remote branch:'
+      git pull https://$(GitHubPAT)@github.com/microsoft/azure-pipelines-tasks $releaseBranch
+      if (-not $?) {
+        Write-Host 'Failed to pull the remote branch. This is expected if the remote branch doesn't exist.
+      }
       git push https://$(GitHubPAT)@github.com/microsoft/azure-pipelines-tasks $releaseBranch
     condition: and(succeeded(), in(variables['build.reason'], 'Schedule', 'Manual'), eq(variables['COURTESY_PUSH'], 'true'))
     displayName: Push release branch
