--- a/ci/build-single-steps.yml
+++ b/ci/build-single-steps.yml
@@ -15,6 +15,9 @@ steps:
   inputs:
     versionSpec: "8.x"
 
+- script: npm i -g npm@6.9.0 --force
+  displayName: Use npm version 6.9.0
+
 # npm install
 - script: npm install
   displayName: npm install
