--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -49,6 +49,8 @@ Tasks/AzureIoTEdgeV2/     @marianan   @tameraw    @pprovost
 
 Tasks/AzureKeyVaultV1/     @ammohant
 
+Tasks/AzureKeyVaultV2/     @ammohant
+
 Tasks/AzureMonitorAlertsV0/    @nadesu    @chshrikh  @pipeline-environment-team
 
 Tasks/AzureMonitorV0/      @ammohant
