--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,9 @@ jobs:
   steps:
   - powershell: |
       # Notify slack channel about failed courtesy push PR creation
-      $body = '{"text": "Failed to create courtesy push PR. Please review the results of failed build: '+$env:SYSTEM_TEAMFOUNDATIONCOLLECTIONURI+'/'+$env:SYSTEM_TEAMPROJECT+'/_build/results?buildId='+$env:BUILD_BUILDID+'&_a=summary "}'
+      $pipelineLink = "$env:SYSTEM_TEAMFOUNDATIONCOLLECTIONURI$env:SYSTEM_TEAMPROJECT/_build/results?buildId=$env:BUILD_BUILDID&_a=summary" 
+      $messageText = "Failed to create courtesy push PR. Please review the results of failed build: $($pipelineLink) "
+      $body = '{"text": "'+$($messageText)+'"}'
       Invoke-RestMethod -Uri $(slackUri) -Method Post -Body $body -ContentType 'application/json'
     displayName: 'Send notification to the slack channel'
 
