--- a/Tasks/AzurePowerShellV5/package.json
+++ b/Tasks/AzurePowerShellV5/package.json
@@ -7,7 +7,7 @@
         "@types/mocha": "^5.2.7",
         "@types/node": "^10.17.0",
         "@types/q": "1.0.7",
-        "azure-pipelines-task-lib": "3.0.6-preview.0",
+        "azure-pipelines-task-lib": "^3.0.6-preview.0",
         "azure-pipelines-tasks-azure-arm-rest-v2": "^2.0.0-preview.0",
         "azure-pipelines-tasks-utility-common": "^3.0.0-preview.0"
     },
