--- a/common-npm-packages/codecoverage-tools/package.json
+++ b/common-npm-packages/codecoverage-tools/package.json
@@ -8,12 +8,14 @@
     "url": "https://github.com/Microsoft/vso-agent-tasks/issues"
   },
   "dependencies": {
+    "@types/mocha": "^8.2.0",
+    "@types/mockery": "^1.4.29",
     "azure-pipelines-task-lib": "^2.11.2",
+    "cheerio": "^0.22.0",
     "fs-extra": "^0.30.0",
     "os": "^0.1.1",
-    "xml2js": "^0.4.17",
-    "cheerio": "^0.22.0",
-    "strip-bom": "^3.0.0"
+    "strip-bom": "^3.0.0",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "typescript": "2.3.4"
