--- a/Tasks/AzureSpringCloudAppDeployV0/tsconfig.json
+++ b/Tasks/AzureSpringCloudAppDeployV0/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
+        "target": "ES6",
         "module": "commonjs",
         "moduleResolution": "node",
-        "lib": ["es2015", "esnext.asynciterable"],
+        "lib": ["esnext.asynciterable"],
     },
     "exclude": ["node_modules", "**/*.d.ts"]
 }
