--- a/Tasks/AzureStaticWebAppV0/package.json
+++ b/Tasks/AzureStaticWebAppV0/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^10.17.0",
     "azure-pipelines-task-lib": "^2.11.3",
     "azure-pipelines-tasks-docker-common-v2": "^1.177.0",
     "vso-task-lib": "^0.5.5"
   },
   "devDependencies": {
-    "@types/node": "^14.11.8"
+    "typescript": "4.0.2"
   }
 }
