--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -27,7 +27,7 @@ stages:
         git config --global user.name "$(username)"
         git checkout -b Localization origin/Localization
         git merge origin/master
-        git log
+        git status
       displayName: "Sync with master branch"
 
     - task: OneLocBuild@2
