--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -19,8 +19,10 @@ stages:
     steps:
     - powershell: |
         $week = (Invoke-WebRequest https://whatsprintis.it -Headers @{"Accept"= "application/json"} | ConvertFrom-Json).week
+        $sprint = (Invoke-WebRequest https://whatsprintis.it -Headers @{"Accept"= "application/json"} | ConvertFrom-Json).sprint
         Write-Host "##vso[task.setvariable variable=week]$week"
-      displayName: "Determine the number of the week in the sprint"
+        Write-Host "##vso[task.setvariable variable=sprint]$sprint"
+      displayName: "Determine the number of the week in the sprint and sprint number"
 
     - powershell: |
         git config --global user.email "$(username)@microsoft.com"
