--- a/Tasks/AzureSpringCloudV0/package.json
+++ b/Tasks/AzureSpringCloudV0/package.json
@@ -25,6 +25,7 @@
     "@types/mocha": "2.2.48",
     "@types/node": "^8.0.0",
     "@types/q": "1.0.7",
+    "JSONPath": "^0.11.2",
     "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.4",
     "moment": "2.21.0",
     "q": "1.4.1",
