--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -48,6 +48,11 @@ stages:
           SYSTEM_ACCESSTOKEN: $(System.AccessToken)
 
     - powershell: |
+        node Localize/bump-version.js
+      displayName: Bump tasks' and packages' Localize/bump-version.js
+      condition: and(succeeded(), eq(variables['WEEK'], '3'), eq(variables['build.reason'], 'Schedule'))
+
+    - powershell: |
         $body = '{"text": "Created tasks localization update PR. Someone please approve/merge it. :please-puss-in-boots:"}'
         Invoke-RestMethod -Uri $(slackUri) -Method Post -Body $body -ContentType 'application/json'
       displayName: 'Send Slack notification about PR opened'
