--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -53,6 +53,33 @@ stages:
       condition: and(succeeded(), eq(variables['WEEK'], '3'), eq(variables['build.reason'], 'Schedule'))
 
     - powershell: |
+        git add -u
+        git commit -m 'Bumped versions'
+        git push
+      displayName: commit and push versions bump
+      condition: and(succeeded(), eq(variables['WEEK'], '3'), eq(variables['build.reason'], 'Schedule'))
+    
+    - powershell: |
+        echo '$(github_token)' | gh auth login --with-token
+
+        $prInfo=(gh api -X GET repos/:owner/:repo/pulls -F head=":owner:$(git branch --show-current)" -f state=open -f base=master | ConvertFrom-Json)
+
+        if ($prInfo.html_url.length -ne 0) {
+          Write-Host 'A PR from Localization branch to master already exists'
+        }
+
+        $buildUrl = "$(System.TeamFoundationCollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)&_a=summary"
+        $body="This PR was auto-generated with [the localization pipeline build]($buildUrl)."
+
+        gh pr create --title 'Localization update' --body $body
+
+        # Getting a link to the opened PR
+        $prInfo=(gh api -X GET repos/:owner/:repo/pulls -F head=":owner:$(git branch --show-current)" -f state=open -f base=master | ConvertFrom-Json)
+        $env:PR_LINK=$prInfo.html_url
+      displayName: Open a PR
+      condition: and(succeeded(), eq(variables['WEEK'], '3'), eq(variables['build.reason'], 'Schedule'))
+
+    - powershell: |
         $body = '{"text": "Created tasks localization update PR. Someone please approve/merge it. :please-puss-in-boots:"}'
         Invoke-RestMethod -Uri $(slackUri) -Method Post -Body $body -ContentType 'application/json'
       displayName: 'Send Slack notification about PR opened'
@@ -64,8 +91,4 @@ stages:
         Invoke-RestMethod -Uri $(slackUri) -Method Post -Body $body -ContentType 'application/json'
       displayName: 'Send Slack notification about error'
       condition: and(failed(), eq(variables['WEEK'], '3'), eq(variables['build.reason'], 'Schedule'))
-
-    - task: PublishBuildArtifacts@1
-      condition: and(succeeded(), eq(variables['WEEK'], '3'))
-      displayName: 'Publish Artifact: drop'
 
