--- a/_generated/CargoAuthenticateV0_Wif/package.json
+++ b/_generated/CargoAuthenticateV0_Wif/package.json
@@ -25,9 +25,9 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "^4.15.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-artifacts-common": "^2.244.3",
     "azure-pipelines-tasks-packaging-common": "^3.244.0",
     "base-64": "^0.1.0",
@@ -35,6 +35,6 @@
     "utf8": "^2.1.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
