--- a/Tasks/ContainerBuildV0/package.json
+++ b/Tasks/ContainerBuildV0/package.json
@@ -5,16 +5,16 @@
   },
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^8.3.0",
     "agent-base": "6.0.2",
-    "azure-pipelines-task-lib": "^4.13.0",
-    "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
-    "azure-pipelines-tasks-docker-common": "2.265.0",
+    "azure-pipelines-task-lib": "^5.2.4",
+    "azure-pipelines-tasks-azure-arm-rest": "3.269.0",
+    "azure-pipelines-tasks-docker-common": "2.268.0",
     "azure-pipelines-tool-lib": "^2.0.10",
     "consistent-hashing": "0.3.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
