--- a/Tasks/DownloadGitHubReleaseV0/package.json
+++ b/Tasks/DownloadGitHubReleaseV0/package.json
@@ -19,14 +19,14 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "artifact-engine": "^1.5.5",
-    "azure-pipelines-task-lib": "^4.0.0-preview",
+    "azure-pipelines-task-lib": "^5.2.4",
     "nock": "^9.6.1",
-    "typed-rest-client": "^1.8.9"
+    "typed-rest-client": "^2.2.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "form-data": "^4.0.4"
