--- a/Tasks/AzureWebAppV1/.npmrc
+++ b/Tasks/AzureWebAppV1/.npmrc
@@ -1,5 +1,1 @@
-scripts-prepend-node-path=true
-
-registry=https://pkgs.dev.azure.com/mseng/PipelineTools/_packaging/PipelineTools_PublicPackages/npm/registry/
-
-always-auth=true
+registry=https://registry.npmjs.org/
