--- a/Tasks/AzureWebAppV1/package.json
+++ b/Tasks/AzureWebAppV1/package.json
@@ -25,7 +25,7 @@
     "agent-base": "6.0.2",
     "azure-devops-node-api": "11.2.0",
     "azure-pipelines-task-lib": "^4.13.0",
-    "azure-pipelines-tasks-azure-arm-rest": "file:Q:/src/azure-pipelines-tasks-common-packages/common-npm-packages/azure-arm-rest/azure-pipelines-tasks-azure-arm-rest-3.269.1.tgz",
+    "azure-pipelines-tasks-azure-arm-rest": "3.270.0",
     "azure-pipelines-tasks-utility-common": "3.267.0",
     "azure-pipelines-tasks-webdeployment-common": "4.265.0",
     "jsonwebtoken": "^9.0.2",
