--- a/Tasks/AzureAppServiceSettingsV1/package.json
+++ b/Tasks/AzureAppServiceSettingsV1/package.json
@@ -20,18 +20,18 @@
   "homepage": "https://github.com/Microsoft/vsts-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/q": "1.0.7",
     "@types/uuid": "^8.3.0",
     "agent-base": "^6.0.2",
-    "azure-devops-node-api": "11.2.0",
-    "azure-pipelines-task-lib": "^4.11.0",
+    "azure-devops-node-api": "^15.1.3",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
     "moment": "^2.29.4",
     "q": "1.4.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
