--- a/Tasks/AzureCLIV2/tsconfig.json
+++ b/Tasks/AzureCLIV2/tsconfig.json
@@ -2,5 +2,6 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "commonjs"
-    }
+    },
+    "exclude": ["Tests", "node_modules"]
 }
