--- a/Tasks/AzureFunctionOnKubernetesV1/package.json
+++ b/Tasks/AzureFunctionOnKubernetesV1/package.json
@@ -16,19 +16,19 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/q": "^1.5.0",
     "@types/uuid": "^9.0.0",
-    "azure-pipelines-task-lib": "^4.11.0",
     "agent-base": "^6.0.2",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
     "azure-pipelines-tasks-docker-common": "^2.265.0",
     "azure-pipelines-tasks-kubernetes-common": "^2.267.0",
     "azure-pipelines-tool-lib": "^2.0.10",
-    "js-yaml": "3.13.1"
+    "js-yaml": "^3.14.1"
   }
 }
