--- a/Tasks/OpenPolicyAgentInstallerV0/package.json
+++ b/Tasks/OpenPolicyAgentInstallerV0/package.json
@@ -18,12 +18,12 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/mocha": "^5.2.7",
-    "azure-pipelines-task-lib": "^4.0.0-preview",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
