--- a/Tasks/ReviewAppV0/package.json
+++ b/Tasks/ReviewAppV0/package.json
@@ -19,13 +19,13 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "^4.0.1-preview"
+    "azure-pipelines-task-lib": "^5.2.4"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "form-data": "^4.0.4"
