--- a/_generated/MavenAuthenticateV0_Wif/package.json
+++ b/_generated/MavenAuthenticateV0_Wif/package.json
@@ -17,17 +17,17 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
     "@types/q": "^1.5.2",
-    "azure-pipelines-tasks-artifacts-common": "^2.243.1",
-    "azure-pipelines-task-lib": "^4.15.0",
+    "azure-pipelines-tasks-artifacts-common": "^2.270.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "fs-extra": "^0.30.0",
     "strip-bom": "^3.0.0",
-    "xml2js": "^0.4.16"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
