--- a/Tasks/AndroidSigningV3/package.json
+++ b/Tasks/AndroidSigningV3/package.json
@@ -22,7 +22,7 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^24.10.0",
     "azure-pipelines-task-lib": "^5.2.4",
-    "azure-pipelines-tasks-securefiles-common": "2.263.0"
+    "azure-pipelines-tasks-securefiles-common": "^2.270.0"
   },
   "devDependencies": {
     "typescript": "^5.7.2"
