--- a/Tasks/AzureVmssDeploymentV0/package.json
+++ b/Tasks/AzureVmssDeploymentV0/package.json
@@ -7,18 +7,18 @@
   },
   "dependencies": {
     "@types/mocha": "^9.1.1",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/q": "1.0.7",
     "agent-base": "^6.0.2",
     "artifact-engine": "^1.5.5",
     "azp-tasks-az-blobstorage-provider": "^3.262.0",
-    "azure-pipelines-task-lib": "^4.11.0",
-    "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
-    "azure-pipelines-tasks-utility-common": "3.267.0",
+    "azure-pipelines-task-lib": "^5.2.4",
+    "azure-pipelines-tasks-azure-arm-rest": "^3.270.0",
+    "azure-pipelines-tasks-utility-common": "^3.270.0",
     "moment": "^2.29.4"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "form-data": "^4.0.4"
